# src/main/java/com/petrolprice/station_search_api/statistics/domain/GeographicLevel.java
@@ -1,0 +1,7 @@
+package com.petrolprice.station_search_api.statistics.domain;
+
+public enum GeographicLevel {
+    NATIONAL,
+    PROVINCE,
+    MUNICIPALITY
+}
